<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_header_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_detail_image"
            android:scaleType="centerCrop"
            android:src="@drawable/detail"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/short_size"
            android:background="@drawable/card_format"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_header_detail"
            tools:context=".ui.activities.DetailActivity">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/logo"
                android:layout_width="@dimen/crypto_logo_width"
                android:layout_height="@dimen/crypto_logo_height"
                android:layout_marginStart="@dimen/short_size"
                android:layout_marginTop="@dimen/short_size"
                android:layout_marginBottom="@dimen/short_size"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/short_size"
                android:layout_marginTop="@dimen/short_size"
                android:fontFamily="@font/bubblegum_sans"
                android:gravity="start"
                android:paddingBottom="@dimen/little_size"
                android:textColor="@color/white"
                android:textSize="@dimen/font_primary_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/logo"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Litecoin" />

            <TextView
                android:id="@+id/symbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/short_size"
                android:fontFamily="@font/contrail_one"
                android:gravity="start"
                android:paddingBottom="@dimen/little_size"
                android:textColor="@color/white"
                android:textSize="@dimen/font_secondary_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="LTC" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/short_size"
                android:textSize="@dimen/font_tertiary_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                tools:text="@string/detail_example_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/short_size"
            android:layout_marginTop="@dimen/short_size"
            android:contentDescription="@string/content_description_icon_back_arrow_detail"
            android:src="@drawable/ic_baseline_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>